kubernetes/convert-archive.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: convert-archive-deployment
spec:
  selector:
    matchLabels:
      app: convert-archive
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: convert-archive
    spec:
      containers:
      - name: convert-archive
        image: $CONVERT_ARCHIVE_IMAGE
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 1
            memory: 100Mi # convert-archive should always use next to nothing
