kubernetes/convert-email.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: convert-email-deployment
spec:
  selector:
    matchLabels:
      app: convert-email
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: convert-email
    spec:
      containers:
      - name: convert-email
        image: CONVERT_EMAIL_IMAGE
        resources:
          requests:
            cpu: 50m
            memory: 30Mi
          limits:
            cpu: 1
            memory: 100Mi # convert-email should always use next to nothing
