kubernetes/convert-html.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: convert-html-deployment
spec:
  selector:
    matchLabels:
      app: convert-html
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: convert-html
    spec:
      containers:
      - name: convert-html
        image: CONVERT_HTML_IMAGE
        resources:
          requests:
            cpu: 50m
            memory: 200Mi
          limits:
            cpu: 1
            memory: 1.5Gi # "large.html" in https://github.com/overview/html-to-pdf-benchmarks/blob/master/large.html costs 1GB
