kubernetes/convert-image.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: convert-image-deployment
spec:
  selector:
    matchLabels:
      app: convert-archive
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: convert-image
    spec:
      containers:
      - name: convert-image
        image: CONVERT_IMAGE_IMAGE
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 1
            memory: 200Mi # total guess
