kubernetes/convert-office.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert-office-deployment
spec:
  selector:
    matchLabels:
      app: convert-office
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: convert-office
    spec:
      containers:
      - name: convert-office
        image: CONVERT_OFFICE_IMAGE
        resources:
          requests:
            cpu: 1
            memory: 500Mi # total guess
          limits:
            cpu: 1
            memory: 500Mi # total guess
