kubernetes/convert-pdf.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert-pdf-deployment
spec:
  selector:
    matchLabels:
      app: convert-pdf
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: convert-pdf
    spec:
      containers:
      - name: convert-pdf
        image: CONVERT_PDF_IMAGE
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 1
            memory: 500Mi # total guess
