kubernetes/convert-pdfocr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert-pdfocr-deployment
spec:
  selector:
    matchLabels:
      app: convert-pdfocr
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: convert-pdfocr
    spec:
      containers:
      - name: convert-pdfocr
        image: CONVERT_PDFOCR_IMAGE
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 1
            memory: 1536Mi # total guess
