kubernetes/convert-pst.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert-pst-deployment
spec:
  selector:
    matchLabels:
      app: convert-pst
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: convert-pst
    spec:
      containers:
      - name: convert-pst
        image: CONVERT_PST_IMAGE
        resources:
          requests:
            cpu: 50m
            memory: 20Mi
          limits:
            cpu: 1
            memory: 200Mi # total guess
