kubernetes/convert-text.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: convert-text-deployment
spec:
  selector:
    matchLabels:
      app: convert-text
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: convert-text
    spec:
      containers:
      - name: convert-text
        image: CONVERT_TEXT_IMAGE
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 1
            memory: 500Mi # total guess
