kubernetes/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: overview-database
spec:
  ports:
  - port: 5432
  selector:
    app: overview-database
  clusterIP: None
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: overview-database
spec:
  selector:
    matchLabels:
      app: overview-database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overview-database
    spec:
      containers:
      - image: overview/overview-database:latest
        # Use :latest, not SHA1, so we don't try to roll over if we re-run ./start.sh
        name: overview-database
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        # initdb will complain about lost+found unless we use a subdir.
        # We ought to be using a subdir anyway, for a version number.
        # https://github.com/docker-library/postgres/issues/263
        # https://github.com/docker-library/postgres/issues/201
        args:
          - postgres
          - "-clisten_addresses=*"
          - -ccheckpoint_segments=100
          - -cdynamic_shared_memory_type=posix
          - -ctimezone=UTC
          - -clog_min_duration_statement=500
          - -clog_timezone=UTC
          - -clog_destination=stderr
          - -cmaintenance_work_mem=1GB
          - -cmax_connections=50
          - -cshared_buffers=128MB
          - -csynchronous_commit=off
          - -cwork_mem=128MB
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
