kubernetes/worker.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: worker-deployment
spec:
  selector:
    matchLabels:
      app: worker
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: worker
      annotations:
        iam.amazonaws.com/role: overview-ENVIRONMENT-worker
    spec:
      containers:
      - name: worker
        image: overview/overview-worker:VERSION
        volumeMounts:
        - name: searchindex
          mountPath: /var/lib/overview/searchindex
        ports:
        - containerPort: 9030 # communicate with web
        - containerPort: 9032 # listen for converters
      volumes:
      - name: searchindex
        persistentVolumeClaim:
          claimName: searchindex-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: overview-worker
  labels:
    app: worker
spec:
  ports:
  - port: 9030
    protocol: TCP
    name: akka-message-broker
  - port: 9032
    protocol: TCP
    name: http-convert-server
  selector:
    app: worker
