kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: overview
spec:
  rules:
  - host: staging.overviewdocs.com
    http:
      paths:
      - backend:
          serviceName: overview-web
          servicePort: 80
