kubernetes/production-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: overview
spec:
  rules:
  - host: www.overviewdocs.com
    http:
      paths:
      - backend:
          serviceName: overview-web
          servicePort: 80
  - host: overviewdocs.com
    http:
      paths:
      - backend:
          serviceName: overview-web
          servicePort: 80
  - host: www.overviewproject.org
    http:
      paths:
      - backend:
          serviceName: overview-web
          servicePort: 80
  - host: overviewproject.org
    http:
      paths:
      - backend:
          serviceName: overview-web
          servicePort: 80
